--- a/contact.html
+++ b/contact.html
@@ -29,21 +29,10 @@
             </div>
         </div>
         <div class="body">
-            <h1>Examples of my Work</h1>
-            <div class="examples">
-                <img class="work-examples" src="images/PHP-QuizApp-Example.PNG">
-                <p>
-                    This is an example of my front-end design using a mix of BootStrap and Custom CSS, in my PHP Final (Fall 2022). This can also be found of my GitHub page
-                    (If it does not appear its still private until Dec. 15/16).
-                </p>
-            </div>
-            <div class="examples">
-                <img class="work-examples" src="images/PHP-CRUD-Example.PNG">
-                <p>
-                    This is an example of my database work, I have done CRUD applications with many different methods such as base JS and PHP, using Entities and Accessors, 
-                    and with the REST architype. Also shows a little bit of front-end work and understanding of the usage of BootStrap.
-                </p>
-            </div>
+            <h1>How to Contact Me</h1>
+            <h3>Socials</h3>
+            <p>You can get ahold of my contacts though my <a href="https://www.linkedin.com/in/erik-hansen-98a276252/">LinkedIn</a> profile.
+            <p>You can also view my <a href="https://github.com/Lost167">GitHub</a> profile to see new and current projects that I have done / working on</p>
         </div>
     </body>
 </html>
