--- a/index.html
+++ b/index.html
@@ -29,20 +29,34 @@
             </div>
         </div>
         <div class="body">
-            <h1>Examples of my Work</h1>
-            <div class="examples">
-                <img class="work-examples" src="images/PHP-QuizApp-Example.PNG">
-                <p>
-                    This is an example of my front-end design using a mix of BootStrap and Custom CSS, in my PHP Final (Fall 2022). This can also be found of my GitHub page
-                    (If it does not appear its still private until Dec. 15/16).
-                </p>
+            <h1>About me, Erik Hansen</h1>
+            <h3>My background</h3>
+            <p>
+                I am a current Programming Analyst (ITPA) student at New Brunswick Community College (est. 2023), where I have gotten and learned most of my programming skills and knowledge. 
+                I am a newer developer, not really learning anything in the field before starting this program in September 2021. But throughout starting my journey in learning the basics
+                and fundimentals of programming and developement has made me realize that this is my passion.
+            </p>
+            <p>
+                The some of the skills I have learned throughout my time in the ITPA program, and the few that I find are my best are in Web Development and in Data. My main skills being:
+            </p>
+            <div class="skills">
+                <ul>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>Javascript</li>
+                    <ul>
+                        <li>Vanilla JS</li>
+                        <li>Node.JS</li>
+                    </ul>
+                </ul>
             </div>
-            <div class="examples">
-                <img class="work-examples" src="images/PHP-CRUD-Example.PNG">
-                <p>
-                    This is an example of my database work, I have done CRUD applications with many different methods such as base JS and PHP, using Entities and Accessors, 
-                    and with the REST architype. Also shows a little bit of front-end work and understanding of the usage of BootStrap.
-                </p>
+            <div class="skills">
+                <ul>
+                    <li>ASP.Net</li>
+                    <li>J2EE</li>
+                    <li>MySQL</li>
+                    <li>MongoDB</li>
+                </ul>
             </div>
         </div>
     </body>
